# apertium-epo-fra

./: .gitattributes  Makefile.am  README  README2  apertium-eo-fr.eo-fr.t0x  apertium-eo-fr.eo-fr.t1x  apertium-eo-fr.eo.dix  apertium-eo-fr.fr.dix  apertium-epo-fra.epo-fra.t1x  apertium-epo-fra.epo.dix  apertium-epo-fra.fra.dix  configure.ac  modes.xml
test/: fra-epo-regression-chunker-expected.txt  fra-epo-regression-generator-expected.txt  fra-epo-regression-input.txt  fra-epo-regression-interchunk-expected.txt  fra-epo-regression-interchunk2-expected.txt  fra-epo-regression-interchunk3-expected.txt  fra-epo-regression-interchunk4-expected.txt  fra-epo-regression-interchunk5-expected.txt  fra-epo-regression-interchunk6-expected.txt  fra-epo-regression-morph-expected.txt  fra-epo-regression-postchunk-expected.txt  fra-epo-regression-postgen-gold.txt  fra-epo-regression-pretransfer-expected.txt  fra-epo-regression-tagger-expected.txt  tests.json
